--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2>Galerie</h2>
             <div class="gallery">
                 <div class="photo-card">
-                    <img src="photo-toro.JPG" alt="Photo 1" class="image-zoom" onclick="openModal('photo-toro.JPG')">
+                    <img src="https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4" alt="Photo 1" class="image-zoom" onclick="openModal('photo-toro.JPG')">
                     <p>course carmaguaise</p>
                     <button>Acheter à 1€</button>
                 </div>
