--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button>Acheter à 1€</button>
                 </div>
                 <div class="photo-card">
-                    <img src="(https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Photo 2" class="image-zoom" onclick="openModal('photo-voiture.jpg')">
+                    <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Photo 2" class="image-zoom" onclick="openModal('https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5')">
                     <p>porche flou de mouvement artistique</p>
                     <button>Acheter à 1€</button>
                 </div>
