--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <button>Acheter à 1€</button>
                 </div>
                 <div class="photo-card">
-                    <img src="photo-poubelle.jpg" alt="Photo 3" class="image-zoom" onclick="openModal('photo-poubelle.jpg')">
+                    <img src="https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e" alt="Photo 3" class="image-zoom" onclick="openModal('https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e')">
                     <p>photo de rue</p>
                     <button>Acheter à 1€</button>
                 </div>
