--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- Section Accueil avec Arbre Illustré -->
     <section id="accueil" class="section accueil">
         <div class="container">
-            <h2 class="fade-in">Bienvenue dans notre Galerie de Photos Naturelles</h2>
-            <p class="fade-in">Explorez notre collection de photos numériques disponibles à l'achat. Un monde de nature à portée de main.</p>
+            <h2 class="fade-in">Bienvenue dans notre Galerie de Photos de tous styles</h2>
+            <p class="fade-in">Explorez ma collection de photos numériques disponibles à l'achat. Un monde de nature à portée de main.</p>
         </div>
         <!-- Illustration arbre -->
         <div class="tree-illustration">
@@ -56,12 +56,12 @@
                 </div>
                 <div class="photo-card">
                     <img src="https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e" alt="Photo 3" class="image-zoom" onclick="openModal('https://github.com/user-attachments/assets/e34aaaa9-9eb1-4a86-9479-efb972d2d00e')">
-                    <p>photo de rue</p>
+                    <p>photo de rue de poubelle de nuit</p>
                     <button>Acheter à 1€</button>
                 </div>
                 <div class="photo-card">
                     <img src="soleil.JPG" alt="Photo 4" class="image-zoom" onclick="openModal('soleil.JPG')">
-                    <p>coucher de soleil en corse</p>
+                    <p>coucher de soleil en corse sur le méditérrannée</p>
                     <button>Acheter à 1€</button>
                 </div>
                 <!-- Ajouter d'autres photos ici -->
