--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <button>Acheter à 1€</button>
                 </div>
                 <div class="photo-card">
-                    <img src="soleil.JPG" alt="Photo 4" class="image-zoom" onclick="openModal('soleil.JPG')">
+                    <img src="https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4" alt="Photo 4" class="image-zoom" onclick="openModal('https://github.com/user-attachments/assets/26856d65-234e-4b21-9e5d-bbb2478c13b4')">
                     <p>coucher de soleil en corse sur le méditérrannée</p>
                     <button>Acheter à 1€</button>
                 </div>
