--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="gallery">
                 <div class="photo-card">
                     <img src="https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4" alt="Photo 1" class="image-zoom" onclick="openModal('https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4')">
-                    <p>course carmaguaise</p>
+                    <p>course carmaguaise 
+                    </p>
                     <button>Acheter à 1€</button>
                 </div>
                 <div class="photo-card">
