--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
         <span class="close" onclick="closeModal()">&times;</span>
         <img id="modal-img" class="modal-content" alt="Image agrandie">
     </div>
+<!-- Section Panier -->
+<section id="panier" class="section panier">
+  <div class="container">
+    <h2>🛒 Mon Panier</h2>
+    <ul id="cart-list"></ul>
+    <p>Total : <span id="cart-total">0</span> €</p>
+  </div>
+</section>
 
     <!-- Section À propos avec effet fade -->
     <section id="apropos" class="section apropos">
