--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                     <img src="https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4" alt="Photo 1" class="image-zoom" onclick="openModal('https://github.com/user-attachments/assets/054fbe66-ed64-4bf1-a8d0-9422caa653e4')">
                     <p>course carmaguaise 
                     </p>
-                    <button>Acheter à 1€</button>
+                    <!-- Exemple pour la photo 1 -->
+<button onclick="addToCart('Course camarguaise', 1)">Acheter à 1€</button>
+
                 </div>
                 <div class="photo-card">
                     <img src="https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5" alt="Photo 2" class="image-zoom" onclick="openModal('https://github.com/user-attachments/assets/d31467c4-17bd-48bf-9d9c-dce14dccf5a5')">
