--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section id="contact" class="section contact">
         <div class="container">
             <h2>📬 Me Contacter</h2>
-            <form action="mailto:ton-email@example.com" method="post" enctype="text/plain">
+            <form action="mailto:beltransoan@gmail.com" method="post" enctype="text/plain">
                 <label for="nom">Nom :</label>
                 <input type="text" id="nom" name="nom" required>
 
