--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
             <ul id="cart-list"></ul>
             <p>Total : <span id="cart-total">0</span> €</p>
         </div>
+        <!-- Panier latéral -->
+<aside id="sidebar-panier">
+    <h3>Votre panier 🛒</h3>
+    <ul id="cart-list"></ul>
+    <p>Total : <span id="cart-total">0</span> €</p>
+</aside>
+
     </section>
 
     <!-- À propos -->
